; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IsIPLocalHostOrMySelf.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Network.c_IsIPLocalHostOrMySelf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsIPLocalHostOrMySelf(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 0, i32* %5, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %48

11:                                               ; preds = %1
  %12 = call i32* (...) @GetHostIPAddressList()
  store i32* %12, i32** %4, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %48

16:                                               ; preds = %11
  store i64 0, i64* %6, align 8
  br label %17

17:                                               ; preds = %32, %16
  %18 = load i64, i64* %6, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = call i64 @LIST_NUM(i32* %19)
  %21 = icmp slt i64 %18, %20
  br i1 %21, label %22, label %35

22:                                               ; preds = %17
  %23 = load i32*, i32** %4, align 8
  %24 = load i64, i64* %6, align 8
  %25 = call i32* @LIST_DATA(i32* %23, i64 %24)
  store i32* %25, i32** %7, align 8
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = call i64 @CmpIpAddr(i32* %26, i32* %27)
  %29 = icmp eq i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %22
  store i32 1, i32* %5, align 4
  br label %35

31:                                               ; preds = %22
  br label %32

32:                                               ; preds = %31
  %33 = load i64, i64* %6, align 8
  %34 = add nsw i64 %33, 1
  store i64 %34, i64* %6, align 8
  br label %17

35:                                               ; preds = %30, %17
  %36 = load i32*, i32** %4, align 8
  %37 = call i32 @FreeHostIPAddressList(i32* %36)
  %38 = load i32*, i32** %3, align 8
  %39 = call i64 @IsLocalHostIP4(i32* %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %45, label %41

41:                                               ; preds = %35
  %42 = load i32*, i32** %3, align 8
  %43 = call i64 @IsLocalHostIP6(i32* %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %41, %35
  store i32 1, i32* %5, align 4
  br label %46

46:                                               ; preds = %45, %41
  %47 = load i32, i32* %5, align 4
  store i32 %47, i32* %2, align 4
  br label %48

48:                                               ; preds = %46, %15, %10
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32* @GetHostIPAddressList(...) #1

declare dso_local i64 @LIST_NUM(i32*) #1

declare dso_local i32* @LIST_DATA(i32*, i64) #1

declare dso_local i64 @CmpIpAddr(i32*, i32*) #1

declare dso_local i32 @FreeHostIPAddressList(i32*) #1

declare dso_local i64 @IsLocalHostIP4(i32*) #1

declare dso_local i64 @IsLocalHostIP6(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
